# typelang

./: dune-project  typelang.opam
lib/: ast.ml  dune  lexer.ml  parser.ml
test/: dune
